Reduced width of goom radio ui to prevent wrapping of vol ctrl

--- a/public/stylesheets/multitask/cab-pie-player.css
+++ b/public/stylesheets/multitask/cab-pie-player.css
@@ -160,7 +160,7 @@ div.navegacion .search_list strong{font-size:12px;font-weight:bold;color:#e10015
 /* player radio */
 .player_radio {display:none};
 .player_radio .controles{width:76px;background:url(../../images/multitask/player/bg_controles_radio.png) no-repeat 0 8px;}
-.player_radio .sonando{width:435px;border-right:0;}
+.player_radio .sonando{width:427px;border-right:0;}
 .player_radio .sonando .mascara{width:300px;}
 .player_radio .sonando p{font-size:11px;color:#fff;text-align:left;margin:0 0 5px;width:300px;}
 .player_radio .cancion{height:30px;}
